2005-09-15  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/tie.cc (get_configuration): Replace fabs -> abs for integer
	arguments. Fixes compilation error with gcc 3.3.

2005-09-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/stepmake/python-module-rules.make
	($(outdir)/%$(SHARED_MODULE_SUFFIX)): SHARED_FLAGS at the end.  

	* lily/*.cc: remove <cmath> everywhere. <cmath> is included from real.hh

2005-09-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* stepmake/stepmake/c++-vars.make (#EXTRA_CXXFLAGS): don't add
	-Werror. Otherwise GCC barfs over various optimizations.

	* scm/define-grob-properties.scm (all-internal-grob-properties):
	add note-head property

	* Documentation/user/instrument-notation.itely (Laissez vibrer
	ties): new node.

	* input/regression/laissez-vibrer-ties.ly: new file.

	* lily/laissez-vibrer-engraver.cc: new file.	

	* lily/include/tie-column-format.hh: new file.

	* lily/tie-column-format.cc: new file. 

	* lily/tie-column.cc (set_manual_tie_configuration): new function.

	* lily/laissez-vibrer-tie.cc: new file.

	* lily/include/laissez-vibrer-tie.hh: new file.

	* ly/engraver-init.ly: add Laissez_vibrer_engraver

	* ly/declarations-init.ly (laissezVibrer): add \laissezVibrer

	* scm/define-grobs.scm (all-grob-descriptions): add
	LaissezVibrerTie, LaissezVibrerTieColumn

	* lily/tie-column.cc (set_tie_config_directions): new function
	(final_shape_adjustment): new function.
	(shift_small_ties): new function.

	* scm/define-music-types.scm (music-descriptions): add LaissezVibrerEvent

	* lily/include/tie.hh (struct Tie_details): add x_gap_
	(struct Tie_configuration): add head_position_

	* lily/tie-column.cc (set_chord_outline): new function.

	* mf/cmr.enc.in:  remove file.

2005-09-11  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/examples.itely: typo fix.  Thanks, Matevž

2005-09-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/feta-banier.mf: make vertical stem 1/2 stemthickness wide to
	reduce aliasing effects.
