@@ -461,7 +461,7 @@ the mark when there are no spanners active."
 				     part-combine-listener))
 	 (first-voice-handle (last-pair noticed)))
 
-    ;; (display (last-pair noticed))
+    ;;(display first-voice-handle)
     (if (pair? first-voice-handle)
 	(hash-set! tab name
 		   ;; cdr : skip name string
