@@ -1,3 +1,8 @@
+2005-09-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/define-music-types.scm (music-descriptions): set length and
+	start-callback for QuoteMusic
+
 2005-09-15  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* lily/tie.cc (get_configuration): Replace fabs -> abs for integer
@@ -8,7 +13,8 @@
 	* stepmake/stepmake/python-module-rules.make
 	($(outdir)/%$(SHARED_MODULE_SUFFIX)): SHARED_FLAGS at the end.  
 
-	* lily/*.cc: remove <cmath> everywhere. <cmath> is included from real.hh
+	* lily/*.cc: remove <cmath> everywhere. <cmath> is included from
+	real.hh
 
 2005-09-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
